Start test suite

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,6 @@ env:
   matrix:
     - EVM_EMACS=emacs-24.5-travis
     - EVM_EMACS=emacs-25.2-travis
-    - EVM_EMACS=emacs-git-snapshot-travis
-
-matrix:
-  allow_failures:
-    - env: EVM_EMACS=emacs-git-snapshot-travis
 
 before_install:
   - git clone https://github.com/rejeep/evm.git $HOME/.evm
@@ -22,7 +17,7 @@ install:
   - cask install
 
 script:
-  - cask build 2>&1 >/dev/null | grep "Error" | wc -l | grep "0"
+  - cask exec ert-runner
 
 notifications:
   email: false
